# Tradex-AI-Automated-Trading-System

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_engine.bat  start_trading.py
Design/: System Structure.txt  system_designs.md
Design/BluePrint/: Comprehensive Blueprint.docx
backend/api_gateway/: __init__.py
backend/api_gateway/src/: __init__.py  main.py
backend/brokers/: __init__.py  angel_one.py  base.py  dhan.py  fyers.py  groww.py  paper_trading.py  registry.py  upstox.py  zerodha.py
backend/common/: __init__.py  config.py  event_queue.py  events.py  logger.py  models.py  monthly_report.py
backend/indian_market/: __init__.py  data_feed.py  models.py  rl_learning_strategy.py  smart_money_strategy.py  strategies.py
backend/risk_management/: __init__.py
backend/risk_management/controls/: __init__.py
backend/risk_management/limits/: __init__.py
backend/risk_management/src/: __init__.py  main.py
database/config/: questdb.conf
database/scripts/: 001_create_tables.sql
docs/architecture/: README.md
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
infrastructure/docker/: Dockerfile.api-gateway  Dockerfile.trading-engine
infrastructure/k8s/: api-gateway.yaml
infrastructure/prometheus/: prometheus.yml
scripts/: demo.py
scripts/research/: README.md
tests/: test_integration.py
(+1 files in other folders)
